Version 2.02.99 - 
===================================
  Hardcode use_lvmetad=0 if cluster locking used and issue a warning msg.
  Avoid reading mirrors with failed devices in its mirrored log.
  Avoid reading from mirrors that have failed devices if they block I/O.
  Change lvs heading Copy% to Cpy%Sync and print RAID4/5/6 sync% there too.
  Fix clvmd support for option -d and properly use its argument.
  Support use of option --yes for lvchange --persistent.
  Fix memory leak on error path for pvcreate with invalid uuid.
  Use lv_is_active() instead of lv_info() call.
  Cleanup some log_error message and use log_warn instead.
  
Version 2.02.98 - 15th October 2012
===================================
  Switch from DEBUG() to DEBUGLOG() in lvmetad as -DDEBUG is already used.
  Prohibit not yet supported change of thin-pool to read-only.
  Support creation of read-only thin volumes (lvcreate -p r).
  Using autoextend percent 0 for thin pool fails 'lvextend --use-policies'.
  Introduce blkdeactivate script to deactivate block devs with dependencies.
  Implement devices/global_filter to hide devices from lvmetad.
  Make vgscan --cache an alias for pvscan --cache.
  Clear lvmetad metadata/PV cache before a rescan.
  Fix a segmentation fault upon receiving a corrupt lvmetad response.
  Give inconsistent metadata warnings in pvscan --cache.
  Make lvremove ask before discarding data areas.
  Avoid overlapping locks that could cause a deadlock in lvmetad.
  Fix memory leaks in libdaemon and lvmetad.
  Optimize libdaemon logging for a fast no-output path.
  Only create lvmetad pidfile when running as a daemon (no -f).
  Warn if lvmetad is running but disabled.
  Warn about running lvmetad with use_lvmetad = 0 in example.conf.
  Update lvmetad help output (flags and their meaning).
  Make pvscan --cache read metadata from LVM1 PVs.
  Make libdaemon buffer handling asymptotically more efficient.
  Add lvmdump -l, to collect a state dump from lvmetad.